[package]
name = "lean_ffi"
version = "0.1.0"
authors = ["Gerardo Salazar <gsalaz9800@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lean_ffi"
crate-type = ["dylib"]

[dependencies]
csv = "1.1"
libc = "0.2"
rayon = "1.1"
serde = { version = "1", features = ["derive"] }
zip = "0.5"